Added `.vscode` configs for debugging, updated Docker Compose with enhanced service configurations and restart policies, introduced Redis, RabbitMQ, Kafka, OpenTelemetry Collector, and Google GenAI environment settings, and expanded `ServiceApp.md` documentation with task details.

--- a/service-app-infra/local/.env.example
+++ b/service-app-infra/local/.env.example
@@ -36,7 +36,11 @@ REDIS_PASSWORD=
 DD_API_KEY=
 
 # OpenTelemetry
-OTEL_EXPORTER_OTLP_ENDPOINT=
-OTEL_METRICS_EXPORTER=
-OTEL_LOGS_EXPORTER=
-OTEL_TRACES_EXPORTER=
+OTEL_EXPORTER_OTLP_ENDPOINT=http://otel-collector:4318
+OTEL_METRICS_EXPORTER=otlp
+OTEL_LOGS_EXPORTER=otlp
+OTEL_TRACES_EXPORTER=otlp
+
+# Google API Key
+GOOGLE_API_KEY=
+GOOGLE_CHAT_MODEL=gemini-2.0-flash-live
