Refactored package structure for better modularization: separated `core`, `pricing`, `member`, and `request` modules, updated imports, and adjusted application configurations accordingly.

--- a/member-service/src/main/resources/application.yml
+++ b/member-service/src/main/resources/application.yml
@@ -50,7 +50,7 @@ spring:
         spring.kafka.retry.topic.enabled: true
         spring.kafka.retry.topic.attempts: 3
         spring.json.use.type.headers: false
-        spring.json.value.default.type: com.eslirodrigues.member.dto.MemberRequestEvent
+        spring.json.value.default.type: com.eslirodrigues.member.request.dto.MemberRequestEvent
         spring.json.trusted.packages: "com.eslirodrigues.member.dto"
 
 app:
