--- a/member-service/src/main/resources/application-k8s.yml
+++ b/member-service/src/main/resources/application-k8s.yml
@@ -45,7 +45,7 @@ spring:
       value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
       properties:
         spring.json.use.type.headers: false
-        spring.json.value.default.type: com.eslirodrigues.member.dto.MemberRequestEvent
+        spring.json.value.default.type: com.eslirodrigues.member.request.dto.MemberRequestEvent
         spring.json.trusted.packages: "com.eslirodrigues.member.dto"
 
   cloud:
