Upgraded to Java 25 and Spring Boot 4.0.2; replaced deprecated dependencies, standardized Redis and RabbitMQ serializers, enhanced Kafka consumer factory, refined security configs, and optimized `.yml` files and annotations across all modules.

--- a/member-request-service/src/main/resources/application.yml
+++ b/member-request-service/src/main/resources/application.yml
@@ -19,7 +19,7 @@ spring:
     oauth2:
       resourceserver:
         jwt:
-          issuer-uri: http://localhost:8080/realms/service-app-realm
+          issuer-uri: http://keycloak:8080/realms/service-app-realm
 
   kafka:
     bootstrap-servers: localhost:9092
@@ -37,6 +37,7 @@ app:
 springdoc:
   api-docs:
     path: /v3/api-docs
+    enabled: false
   swagger-ui:
     path: /swagger-ui.html
 
