--- a/member-service/src/main/resources/application.yml
+++ b/member-service/src/main/resources/application.yml
@@ -47,11 +47,7 @@ spring:
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
       properties:
-        spring.kafka.retry.topic.enabled: true
-        spring.kafka.retry.topic.attempts: 3
-        spring.json.use.type.headers: false
-        spring.json.value.default.type: com.eslirodrigues.member.request.dto.MemberRequestEvent
-        spring.json.trusted.packages: "com.eslirodrigues.member.dto"
+        spring.json.trusted.packages: "com.eslirodrigues.member.request.dto"
 
 app:
   rabbitmq:
